# openscp

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_ES.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  mirror-codeberg.yml  nightly-dispatch-dev.yml  nightly-quality.yml  release-artifacts.yml
assets/linux/: README.md  openscp.desktop
assets/macos/: Info.plist.in  OpenSCP.icns  README.md  entitlements.plist  qt.conf
core/: CMakeLists.txt
core/include/openscp/: ClientFactory.hpp  CurlFtpClient.hpp  CurlWebDavClient.hpp  KnownHostsUtils.hpp  Libssh2ScpClient.hpp  Libssh2SftpClient.hpp  Log.hpp  MockSftpClient.hpp  RuntimeLogging.hpp  SftpClient.hpp  SftpTypes.hpp
core/src/curl/: CurlBackendCommon.cpp  CurlBackendCommon.hpp  CurlFtpClient.cpp  CurlWebDavClient.cpp
core/src/libssh2/: ClientFactory.cpp  Libssh2ScpClient.cpp  Libssh2SftpClient.cpp
core/src/libssh2/detail/: Libssh2SftpClient.FileListing.inc  Libssh2SftpClient.FileMetadataOps.inc  Libssh2SftpClient.TransferOps.inc  Libssh2SftpClient.TransferSupport.inc  Libssh2SftpClient.TransportAuth.inc  Libssh2SftpClient.TransportLifecycle.inc  Libssh2SftpClient.TransportNet.inc
core/src/mock/: MockSftpClient.cpp
docs/: ABOUT_LIBRARIES_EN.txt  ABOUT_LIBRARIES_ES.txt  ABOUT_LIBRARIES_FR.txt  ABOUT_LIBRARIES_PT.txt  LICENSING.md
docs/credits/: CREDITS.md  LGPL_COMPLIANCE.md
docs/credits/LICENSES/: tinyxml2-zlib-license.txt
packaging/flatpak/: com.openscp.OpenSCP.yml
packaging/snap/: openscp-snap.desktop  snapcraft.yaml
scripts/: README.md  bump_version.sh  check_ci_local.sh  generate_release_notes.sh  macos.sh  package_appimage.sh  package_flatpak.sh  package_mac.sh  package_snap.sh  verify_macos_bundle.sh  verify_qt_svg_plugins.sh
tests/: CMakeLists.txt  core_mock_tests.cpp  curl_ftp_integration_tests.cpp  curl_ftps_integration_tests.cpp  curl_webdav_integration_tests.cpp  libssh2_integration_tests.cpp  libssh2_scp_integration_tests.cpp
translations/: openscp_en.ts  openscp_es.ts  openscp_fr.ts  openscp_pt.ts
ui/: AboutDialog.cpp  AboutDialog.hpp  AppVersion.hpp.in  ConnectionDialog.cpp  ConnectionDialog.hpp  DragAwareTreeView.cpp  DragAwareTreeView.hpp  MainWindow.cpp  MainWindow.hpp  MainWindowConnection.cpp  MainWindowLocalOps.cpp  MainWindowRemoteOps.cpp  MainWindowSharedUtils.cpp  MainWindowSharedUtils.hpp  MainWindowTransfers.cpp  PermissionsDialog.cpp  PermissionsDialog.hpp  RemoteModel.cpp  RemoteModel.hpp  RemoteWalker.cpp  RemoteWalker.hpp  SavedSitesPersistence.cpp  SavedSitesPersistence.hpp  SecretStore.cpp  SecretStore.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SiteManagerDialog.cpp  SiteManagerDialog.hpp  TimeUtils.hpp  TransferManager.cpp  TransferManager.hpp  TransferQueueDialog.cpp  TransferQueueDialog.hpp  UiAlerts.cpp  UiAlerts.hpp  main.cpp
